# Cidana-SVT-AV1

./: .gitignore  CMakeLists.txt  Dangerfile  Gemfile  README.md  dryruntest-report.xml  stylecheck.sh
Source/: GPATH  GRTAGS  GTAGS
Source/API/: EbSvtAv1.h  EbSvtAv1Dec.h  EbSvtAv1Enc.h
Source/App/EncApp/: EbAppConfig.c  EbAppConfig.h
Source/Lib/Common/ASM_AVX2/: EbComputeSAD_Intrinsic_AVX2.c  EbIntraPrediction_Intrinsic_AVX2.c  highbd_fwd_txfm_avx2.c  variance_avx2.c
Source/Lib/Common/ASM_SSE2/: variance_sse2.c
Source/Lib/Common/C_DEFAULT/: EbComputeSAD_C.c  EbComputeVariance_C.c
Source/Lib/Common/Codec/: EbAdaptiveMotionVectorPrediction.c  EbAdaptiveMotionVectorPrediction.h  EbCdef.c  EbCdefProcess.c  EbCodingLoop.c  EbCodingUnit.h  EbDefinitions.h  EbDlfProcess.c  EbEncDecProcess.c  EbEntropyCoding.c  EbFullLoop.c  EbInitialRateControlProcess.c  EbInterPrediction.c  EbInterPrediction.h  EbIntraPrediction.h  EbMdRateEstimation.c  EbMdRateEstimation.h  EbModeDecision.c  EbModeDecision.h  EbModeDecisionConfiguration.c  EbModeDecisionConfigurationProcess.c  EbModeDecisionConfigurationProcess.h  EbModeDecisionProcess.c  EbModeDecisionProcess.h  EbMotionEstimation.c  EbMotionEstimation.h  EbMotionEstimationContext.h  EbMotionEstimationLcuResults.h  EbMotionEstimationProcess.c  EbPacketizationProcess.c  EbPictureAnalysisProcess.c  EbPictureBufferDesc.c  EbPictureBufferDesc.h  EbPictureControlSet.c  EbPictureControlSet.h  EbPictureDecisionProcess.c  EbPictureDecisionProcess.h  EbPictureManagerProcess.c  EbPictureManagerQueue.h  EbPictureOperators.h  (+16 more)
Source/Lib/Encoder/Codec/: CMakeLists.txt  EbEncHandle.c
code_coverage_report/: generate_report.sh
test/: .clang-format  AdaptiveScanTest.cc  BitstreamReaderMock.cc  BitstreamReaderMock.h  BitstreamWriterTest.cc  CMakeLists.txt  Doxyfile  EncodeTxbAsmTest.cc  EncodeTxbRef.h  EncoderAPITest.cc  EndToEndTest.cc  FilmGrainTest.cc  FwdTxfm1dTest.cc  FwdTxfm2dAsmTest.cc  FwdTxfm2dTest.cc  InvTxfm1dTest.cc  InvTxfm2dAsmTest.cc  QuantAsmTest.cc  SadTest.cc  SvtAv1EncApiTest.cc  Txfm1dTest.cc  Txfm2dTest.cc  TxfmCommon.h  TxfmInv1dTest.cc  TxfmTest.h  VideoSource.h  Y4mVideoSource.cc  Y4mVideoSource.h  YuvVideoSource.cc  YuvVideosource.h  feature_sb_test.cc  intrapred_cfl_test.cc  intrapred_dr_test.cc  intrapred_edge_filter_test.cc  intrapred_test.cc  params.h  random.h  util.cc  util.h
test/api_test/: CMakeLists.txt  SvtAv1EncApiTest.cc  SvtAv1EncApiTest.h  SvtAv1EncParamsTest.cc  params.h
test/e2e_test/: CMakeLists.txt  CompareTools.h  ConfigReader.h  DummyVideoSource.h  E2eTestVectors.h  FrameQueue.cc  FrameQueue.h  ParseUtil.cc  ParseUtil.h  PerformanceCollect.cc  PerformanceCollect.h  ReconSink.cc  ReconSink.h  RefDecoder.cc  RefDecoder.h  SvtAv1E2EFramework.cc  SvtAv1E2EFramework.h  SvtAv1E2EMultiInstantTest.cc  SvtAv1E2EParamsTest.cc  SvtAv1E2ETest.cc  VideoFrame.h  VideoMonitor.cc  VideoMonitor.h  VideoSource.cc  VideoSource.h  Y4mVideoSource.cc  Y4mVideoSource.h  YuvVideoSource.cc  YuvVideoSource.h  YuvVideosource.h  libaom_dependency.cmake  test_data_download_worker.cmake  test_vector_list.txt
test/ref/: EncodeTxbRef.h  TxfmRef.cc  TxfmRef.h
test/vectors/: conformance_test.cfg  longtime_comformance_test.cfg  partial_src_frame.cfg  profile_param.cfg  qp_death_test.cfg  smoking_test.cfg
